@@ -63,6 +63,7 @@ typedef struct bque {
   char *rval[NUMQ];             /**< environment, from setq() */
   char *comm;                   /**< command to be executed */
   uint32_t pid;                 /**< Process id of this entry */
+  PE_Info *pe_info;             /**< pe_info for evaluating queue, or NULL */
 } BQUE;
 
 intmap *queue_map = NULL; /**< Intmap for looking up queue entries by pid */
@@ -204,6 +205,8 @@ free_qentry(BQUE *point)
     mush_free(point->semattr, "cqueue.semattr");
   if (point->comm)
     mush_free(point->comm, "cqueue.comm");
+  if (point->pe_info)
+    free_pe_info(point->pe_info);
   im_delete(queue_map, point->pid);
   mush_free(point, "cqueue");
 }
@@ -288,21 +291,28 @@ next_pid(void)
  * \param player the enactor for the queued command.
  * \param command the command to enqueue.
  * \param cause the player or object causing the command to be queued.
+ * \param pe_info the pe_info to use for evaluating the queue, or NULL
  */
 void
-parse_que(dbref player, const char *command, dbref cause)
+parse_que(dbref player, const char *command, dbref cause, PE_Info *pe_info)
 {
   int a;
   BQUE *tmp;
   int pid;
-  if (!IsPlayer(player) && (Halted(player)))
+  if (!IsPlayer(player) && (Halted(player))) {
+    free_pe_info(pe_info);
     return;
-  if (!pay_queue(player, command))      /* make sure player can afford to do it */
+  }
+  if (!pay_queue(player, command)) {
+    /* make sure player can afford to do it */
+    free_pe_info(pe_info);
     return;
+  }
   pid = next_pid();
   if (pid == 0) {
     /* Too many queue entries */
     notify(player, T("Queue entry table full. Try again later."));
+    free_pe_info(pe_info);
     return;
   }
   tmp = mush_malloc(sizeof *tmp, "cqueue");
@@ -314,6 +324,7 @@ parse_que(dbref player, const char *command, dbref cause)
   tmp->next = NULL;
   tmp->left = 0;
   tmp->cause = cause;
+  tmp->pe_info = pe_info;
   for (a = 0; a < 10; a++)
     if (!global_eval_context.wnxt[a])
       tmp->env[a] = NULL;
@@ -427,7 +438,7 @@ queue_attribute_useatr(dbref executor, ATTR *a, dbref enactor)
       /* Skip the ':' */
       command++;
   }
-  parse_que(executor, command, enactor);
+  parse_que(executor, command, enactor, NULL);
   free(start);
   return 1;
 }
@@ -456,7 +467,7 @@ wait_que(dbref player, int waittill, char *command, dbref cause, dbref sem,
   if (waittill == 0) {
     if (sem != NOTHING)
       add_to_sem(sem, -1, semattr);
-    parse_que(player, command, cause);
+    parse_que(player, command, cause, NULL);
     return;
   }
   if (!pay_queue(player, command))      /* make sure player can afford to do it */
@@ -474,6 +485,7 @@ wait_que(dbref player, int waittill, char *command, dbref cause, dbref sem,
   tmp->cause = cause;
   tmp->semattr = NULL;
   tmp->next = NULL;
+  tmp->pe_info = NULL;
   for (a = 0; a < 10; a++) {
     if (!global_eval_context.wnxt[a])
       tmp->env[a] = NULL;
@@ -668,7 +680,11 @@ do_entry(BQUE *entry, int include_recurses)
       *(global_eval_context.break_replace) = '\0';
       if (!include_recurses) {
         start_cpu_timer();
-        global_eval_context.pe_info = make_pe_info();
+        if (entry->pe_info) {
+          global_eval_context.pe_info = entry->pe_info;
+        } else {
+          global_eval_context.pe_info = make_pe_info();
+        }
       }
       while (!cpu_time_limit_hit && *s) {
         r = global_eval_context.ccom;
@@ -711,6 +727,7 @@ do_entry(BQUE *entry, int include_recurses)
           tmp->next = NULL;
           tmp->left = 0;
           tmp->cause = entry->cause;
+          tmp->pe_info = NULL;
           for (a = 0; a < 10; a++) {
             if (global_eval_context.include_called == 1) {
               tmp->env[a] =
@@ -752,7 +769,9 @@ do_entry(BQUE *entry, int include_recurses)
       }
       if (!include_recurses) {
         reset_cpu_timer();
-        free_pe_info(global_eval_context.pe_info);
+        if (!entry->pe_info) {
+          free_pe_info(global_eval_context.pe_info);
+        }
         global_eval_context.pe_info = NULL;
       }
     }
@@ -1533,7 +1552,7 @@ do_halt(dbref owner, const char *ncom, dbref victim)
       global_eval_context.wnxt[j] = global_eval_context.wenv[j];
     for (j = 0; j < NUMQ; j++)
       global_eval_context.rnxt[j] = global_eval_context.renv[j];
-    parse_que(player, ncom, player);
+    parse_que(player, ncom, player, NULL);
   }
 }
 
