@@ -1552,6 +1552,8 @@ bind_and_queue(dbref player, dbref cause, char *action,
 {
   char *repl, *command;
   const char *replace[2];
+  PE_Info *pe_info;
+  int i = 0;
 
   replace[0] = arg;
   replace[1] = placestr;
@@ -1562,7 +1564,18 @@ bind_and_queue(dbref player, dbref cause, char *action,
 
   mush_free(repl, "replace_string.buff");
 
-  parse_que(player, command, cause);
+  pe_info = make_pe_info();
+  if (global_eval_context.pe_info->iter_nesting >= 0) {
+    for (i = 0; i <= global_eval_context.pe_info->iter_nesting; i++) {
+      pe_info->iter_inum[i] = global_eval_context.pe_info->iter_inum[i];
+      pe_info->iter_itext[i] = mush_strdup(global_eval_context.pe_info->iter_itext[i], "dolist_arg");
+    }
+  }
+  pe_info->iter_inum[i] = parse_integer(placestr);
+  pe_info->iter_itext[i] = mush_strdup(arg, "dolist_arg");
+  pe_info->iter_nesting = i;
+  pe_info->local_iter_nesting = i;
+  parse_que(player, command, cause, pe_info);
 
   mush_free(command, "strip_braces.buff");
 }
@@ -1847,7 +1860,7 @@ do_dolist(dbref player, char *list, char *command, dbref cause,
   if (!command || !*command) {
     notify(player, T("What do you want to do with the list?"));
     if (flags & DOL_NOTIFY)
-      parse_que(player, "@notify me", cause);
+      parse_que(player, "@notify me", cause, NULL);
     return;
   }
 
@@ -1855,7 +1868,7 @@ do_dolist(dbref player, char *list, char *command, dbref cause,
     if (list[1] != ' ') {
       notify(player, T("Separator must be one character."));
       if (flags & DOL_NOTIFY)
-        parse_que(player, "@notify me", cause);
+        parse_que(player, "@notify me", cause, NULL);
       return;
     }
     delim = list[0];
@@ -1874,7 +1887,7 @@ do_dolist(dbref player, char *list, char *command, dbref cause,
   if (objstring && !*objstring) {
     /* Blank list */
     if (flags & DOL_NOTIFY)
-      parse_que(player, "@notify me", cause);
+      parse_que(player, "@notify me", cause, NULL);
     return;
   }
 
@@ -1892,7 +1905,7 @@ do_dolist(dbref player, char *list, char *command, dbref cause,
      *  directly, since we want the command to be queued
      *  _after_ the list has executed.
      */
-    parse_que(player, "@notify me", cause);
+    parse_que(player, "@notify me", cause, NULL);
   }
 }
 
